Closed Bug 1319510 Opened 8 years ago Closed 8 years ago

WebRenderBridgeParent can try to use a null mCompositorScheduler

Categories

(Core :: Graphics: WebRender, defect, P3)

53 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox53 --- affected

People

(Reporter: kats, Assigned: kats)

References

Details

(Whiteboard: [gfx-noted])

While trying to run reftests on a QuantumRender build I was hitting crashes because the WebRenderBridgeParent was trying to call ScheduleComposition on a null mCompositorScheduler. It seemed like the "parent" WRBP had already cleared the mCompositorScheduler, but the "child" WRBP had a ref to the parent and was trying to schedule a composite.
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/4cf8741bb86f
Guard against using a null mCompositorScheduler. r=sotaro?
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.