Bug 1319510 - Guard against using a null mCompositorScheduler. r=sotaro?

MozReview-Commit-ID: LAwFEx39CaS